--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,14 @@
 
         <header class="header">
             <div class="overlay">
-                <nav class="navbar">
-                    <a class="navbar-brand" href="#">
-                        <img src="./images/logo.png" alt="شعار المنتج">
-                    </a>
-                </nav>
+                <div class="container">
+                    <nav class="navbar">
+                        <a class="navbar-brand" href="#">
+                            <img src="./images/logo.png" alt="شعار المنتج">
+                        </a>
+                    </nav>
+                </div>
+
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
@@ -52,18 +55,18 @@
                         <div class="col-md-6 col-12">
                             <div class="title1 text-center">
                                 <h5>
-                                   الكتاب الأول
+                                    الكتاب الأول
                                 </h5>
                             </div>
                             <a href="book1.html" class="text-center">
-                                <img src="./images/book1.png"  alt="صورة الكتاب
+                                <img src="./images/book1.png" alt="صورة الكتاب
                                     الاول">
                             </a>
                         </div>
                         <div class="col-md-6 col-12" id="book2">
                             <div class="title1 text-center">
                                 <h5 id="book1">
-                                   الكتاب الثاني
+                                    الكتاب الثاني
                                 </h5>
                             </div>
                             <a href="book2.html">
@@ -86,8 +89,11 @@
                                 </h4>
                             </div>
                             <div class="map" id="map">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7298437.864989434!2d35.37400445122722!3d26.72233717029778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14492b3b9b80f3d7%3A0x4786825eb8aefe8e!2z2LTYp9ix2Lkg2KfZhNin2LLZh9ix!5e0!3m2!1sar!2sjo!4v1619215659490!5m2!1sar!2sjo"  width="460" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>                 
-                           </div>
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7298437.864989434!2d35.37400445122722!3d26.72233717029778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14492b3b9b80f3d7%3A0x4786825eb8aefe8e!2z2LTYp9ix2Lkg2KfZhNin2LLZh9ix!5e0!3m2!1sar!2sjo!4v1619215659490!5m2!1sar!2sjo"
+                                    width="460" height="200" frameborder="0"
+                                    style="border:0" allowfullscreen></iframe>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -97,18 +103,20 @@
                                     اتصل بنا
                                 </h4>
                             </div>
-                        </div>    
+                        </div>
                         <ul class="contact-us list-unstyled">
                             <li>
                                 <i class="fas fa-phone icon" aria-hidden="true"></i>
                                 012 3456 7890
                             </li>
                             <li>
-                                <i class="fas fa-map-marker icon" aria-hidden="true"></i>
+                                <i class="fas fa-map-marker icon"
+                                    aria-hidden="true"></i>
                                 مصر في وسط مدينة القاهرة
                             </li>
                             <li>
-                                <i class="fas fa-envelope icon" aria-hidden="true"></i>
+                                <i class="fas fa-envelope icon"
+                                    aria-hidden="true"></i>
                                 email@domain.com
                             </li>
                         </ul>
@@ -122,26 +130,30 @@
                     <div class="col-sm">
                         <ul class="list-inline">
                             <li class="list-inline-item">
-                                <a href="https://www.facebook.com/" class="facebook" title="facebook">
+                                <a href="https://www.facebook.com/"
+                                    class="facebook" title="facebook">
                                     <i class="fab fa-facebook"
                                         aria-hidden="true"></i>
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.instagram.com/" class="instagram" title="instagram">
+                                <a href="https://www.instagram.com/"
+                                    class="instagram" title="instagram">
                                     <i class="fab fa-instagram"
                                         aria-hidden="true"></i>
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.google.com/" title="google-plus"
+                                <a href="https://www.google.com/"
+                                    title="google-plus"
                                     class="google-plus">
                                     <i class="fab fa-google"
                                         aria-hidden="true"></i>
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.twitter.com/" class="twitter" title="twitter">
+                                <a href="https://www.twitter.com/"
+                                    class="twitter" title="twitter">
                                     <i class="fab fa-twitter"
                                         aria-hidden="true"></i>
                                 </a>
@@ -150,10 +162,7 @@
                     </div>
                     <div class="col-sm">
                         <div class="copyright">
-                            <p>
-                                &copy;
-                                جميع الحقوق محفوظة 2021
-                            </p>
+
                         </div>
                     </div>
                 </div>
