--- a/src/book1.html
+++ b/src/book1.html
@@ -66,7 +66,7 @@
                 <div class="row">
                     <ol class="breadcrumb custom-breadcrumb-book1">
                         <li>
-                            <a href="./">الصفحة الرئيسية</a>
+                            <a href=".">الصفحة الرئيسية</a>
                         </li>
                         <li class="active">الكتاب الأول</li>
                     </ol>
@@ -190,46 +190,44 @@
         </section>
         <footer>
             <div class="container">
-                <div class="row">
-                    <div class="col-sm">
-                        <ul class="list-inline">
-                            <li class="list-inline-item">
-                                <a href="https://www.facebook.com/"
-                                    class="facebook" title="facebook">
-                                    <i class="fab fa-facebook"
-                                        aria-hidden="true"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="https://www.instagram.com/"
-                                    class="instagram" title="instagram">
-                                    <i class="fab fa-instagram"
-                                        aria-hidden="true"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="https://www.google.com/"
-                                    title="google-plus"
-                                    class="google-plus">
-                                    <i class="fab fa-google"
-                                        aria-hidden="true"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="https://www.twitter.com/"
-                                    class="twitter" title="twitter">
-                                    <i class="fab fa-twitter"
-                                        aria-hidden="true"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-sm">
-                        <div class="copyright">
+                    <div class="clearfix">
+                        <div class="copyright float-right">
 
                         </div>
+                        <div class="social-icon float-left">
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="https://www.facebook.com/"
+                                        class="facebook" title="facebook">
+                                        <i class="fab fa-facebook"
+                                            aria-hidden="true"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="https://www.instagram.com/"
+                                        class="instagram" title="instagram">
+                                        <i class="fab fa-instagram"
+                                            aria-hidden="true"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="https://www.google.com/"
+                                        title="google-plus"
+                                        class="google-plus">
+                                        <i class="fab fa-google"
+                                            aria-hidden="true"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="https://www.twitter.com/"
+                                        class="twitter" title="twitter">
+                                        <i class="fab fa-twitter"
+                                            aria-hidden="true"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
             </div>
         </footer>
     </body>
